# ARCExpect

./: .gitignore  README.md  RELEASE_NOTES.md  arcexpect.slnx  pyproject.toml
ArcExpect/: ArcExpect.fsproj  Badge.fs  BadgeCreation.fs  Helpers.fs  TopLevelAPI.fs  __init__.py
ArcExpect.Tests/: Execution.fs  TestRunner.fs
